# OpenClaw-Security-Tool-Suite

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  chitin_folder_structure.sh
.github/ISSUE_TEMPLATE/: bug_report.md  detection_pattern.md
.github/workflows/: ci.yml  security-audit.yml
certs/: README.md
crates/agent/: Cargo.toml  README.md
crates/agent/src/: main.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: main.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: lib.rs
dashboard-ui/: README.md  package.json  vite.config.ts
dashboard-ui/public/: index.html
dashboard-ui/src/: App.tsx
dashboard-ui/src/styles/: main.css
data/: iocs.toml  patterns.toml  sensitive_paths.toml
docs/architecture/: overview.md
docs/deployment/: server-setup.md
examples/playbooks/: credential-rotation.md
examples/policies/: finance-org.toml
policies/: default.toml  strict.toml
proto/: README.md  chitinwall.proto
scripts/: gen-certs.sh  setup-lab.sh
tests/: README.md
