[package]
name = "chitinwall-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chitinwall-agent"
path = "src/main.rs"

[dependencies]
chitinwall-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
prost.workspace = true
notify = "6.1"  # Filesystem watching
tokio-tungstenite = "0.21"  # WebSocket
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
