[package]
name = "chitinwall-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chitinwall-server"
path = "src/main.rs"

[dependencies]
chitinwall-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
prost.workspace = true
axum = "0.7"  # Dashboard HTTP server
tower-http = "0.5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
regex = "1.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
