[package]
name = "chitinwall-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex = "1.10"
sha2 = "0.10"
prost.workspace = true

[dev-dependencies]
tempfile = "3.8"
